fix(svg): update dimensions for improved visibility

--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,8 @@ img {
 
 svg {
     display: block;
-    /* width: 1.25rem;
-    height: 1.25rem; */
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .header__container,
